--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,25 @@
+.logo {
+    max-width: 100px; 
+    margin-bottom: 20px; 
+}
+
+.plus-jakarta-sans-light {
+    font-family: 'Plus Jakarta Sans', sans-serif;
+    font-weight: 200;
+}
+
+.plus-jakarta-sans-regular {
+    font-family: 'Plus Jakarta Sans', sans-serif;
+    font-weight: 400;
+}
+
+.plus-jakarta-sans-bold {
+    font-family: 'Plus Jakarta Sans', sans-serif;
+    font-weight: 700;
+}
+
+
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -19,7 +41,9 @@ body {
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
     margin: 20px;
     width: 400px;
-    max-width: 80%;
+    max-width: 40%;
+    display: flex;
+    flex-direction: column;
 }
 
 .form-container h2 {
@@ -39,6 +63,7 @@ body {
     font-weight: bold;
     color: #666;
     margin-bottom: 8px;
+    text-align: left;
 }
 
 .form-group input {
@@ -61,6 +86,7 @@ button {
     transition: background-color 0.3s ease;
     font-size: 16px;
     font-weight: bold;
+    margin-top: 10px;
 }
 
 button:hover {
@@ -80,5 +106,13 @@ button:hover {
 
 .forgot-password a:hover {
     text-decoration: underline;
-    
+}
+
+.image-container {
+    width: 60%;
+}
+
+.image-container img {
+    max-width: 100%;
+    height: auto;
 }
